--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
       setTimeout(() => userMsg.remove(), 4000);
 
       
-      const response = await fetch("https://16ff-122-100-89-64.ngrok-free.app/api/generate", {
+      const response = await fetch("https://20c3-122-100-89-64.ngrok-free.app/api/generate", {
   method: "POST",
   headers: {
     "Content-Type": "application/json"
