--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
       setTimeout(() => userMsg.remove(), 4000);
 
       //  YUNA 的回應
-      const response = await fetch("https://20c3-122-100-89-64.ngrok-free.app/api/generate", {
+      const response = await fetch("https://07a0-122-100-89-64.ngrok-free.app/api/generate", {
   method: "POST",
   headers: {
     "Content-Type": "application/json"
