--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     "Content-Type": "application/json"
   },
   body: JSON.stringify({
-    model: "yuna-gpt", // ← 你跑的模型名字
+    model: "yunaGPT", // ← 你跑的模型名字
     prompt: msg,
     stream: false
   }),
