--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
   </div>
 
   <header>
-    <a href="menu/products.html" class="menu-button">🔬 黑子實驗室</a>
-    <a href="menu/checkout.html" class="menu-button">加值/會員</a>
-    <a href="menu/tools.html" class="menu-button">🛠️ 實用工具</a>
-    <a href="menu/Yuna_Ai_Gallery.html" class="menu-button">❤ 竊竊私語</a>
-    <a href="menu/hosting.html" class="menu-button">🌐 虛擬主機</a>
+    <a href="F:/yuna_web/menu/products.html" class="menu-button">🔬 黑子實驗室</a>
+    <a href="F:/yuna_web/menu/checkout.html" class="menu-button">加值/會員</a>
+    <a href="F:/yuna_web/menu/tools.html" class="menu-button">🛠️ 實用工具</a>
+    <a href="F:/yuna_web/menu/Yuna_Ai_Gallery.html" class="menu-button">❤ 竊竊私語</a>
+    <a href="F:/yuna_web/menu/hosting.html" class="menu-button">🌐 虛擬主機</a>
     <a href="https://discord.gg/uu49VyYAwF" class="menu-button">💖 合作廠商</a>
   </header>
 
@@ -156,75 +156,23 @@
       </span>
     </div>
   </div>
-  
+
   <div class="frame-box">
     <h2>📩 關於 YUNA 的黑色空間 📩</h2>
     <p>工具屬教學測試用，個人在外面做什麼都與之無關<br>個人造業個人擔，貞子造業甄子丹</p>
   </div>
   <div class="frame-box" style="display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 20px;">
     <div style="flex: 1; min-width: 260px; text-align: left;">
-      <h2 style="color: #ffe6f9; font-size: 1.6rem;">🌟研製中：<span style="color: #66ccff;">《布裘魜  margin: 160px auto 40px;
-      max-width: 700px;
-      border: 3px dashed #ff99cc;
-      border-radius: 30px;
-      padding: 40px;
-      text-align: center;
-      font-size: 1.1rem;
-      background: rgba(0, 0, 0, 0.6);
-      box-shadow: 0 0 25px #ff66ccaa;
-    }
-    .frame-box h2 {
-      color: #ff99cc;
-      font-size: 1.8rem;
-      margin-bottom: 20px;
-    }
-  </style>
-</head>
-<body>
-  <canvas class="matrix"></canvas>
-
-  <!-- 年齡驗證彈窗 -->
-  <div class="verify-overlay" id="age-verify">
-    <h1 class="verify-title">꒰՞｡ • ﻌ •꒱ 歡迎進入 灰色空間</h1>
-    <button class="verify-btn" onclick="enterSite()">☁ 我滿十八歲了 ☁</button>
-    <button class="verify-btn" onclick="location.href='https://www.google.com'">🚫 這裡沒有小朋友的位置 🚫</button>
-  </div>
-
-  <header>
-    <a href="menu/products.html" class="menu-button">🔬 黑子實驗室</a>
-    <a href="menu/checkout.html" class="menu-button">加值/會員</a>
-    <a href="menu/tools.html" class="menu-button">🛠️ 實用工具</a>
-    <a href="menu/Yuna_Ai_Gallery.html" class="menu-button">❤ 竊竊私語</a>
-    <a href="menu/hosting.html" class="menu-button">🌐 虛擬主機</a>
-    <a href="https://discord.gg/uu49VyYAwF" class="menu-button">💖 合作廠商</a>
-  </header>
-
-  <div class="waifu">
-    <canvas id="live2d" class="live2d" width="600" height="535"></canvas>
-    <div class="waifu-tool">
-      <span class="fui-user" style="position: relative; display: inline-block; width: 60px; height: 50px;">
-        <button id="costume-btn" style="position: fixed; right: 30px; background: #ff66cc; color: white; border: none; border-radius: 30px; padding: 10px 20px; box-shadow: 0 0 10px #ff99cc; font-weight: bold; z-index: 99999;">換衣服</button>
-      </span>
-    </div>
-  </div>
-  
-  <div class="frame-box">
-    <h2>📩 關於 YUNA 的黑色空間 📩</h2>
-    <p>工具屬教學測試用，個人在外面做什麼都與之無關<br>個人造業個人擔，貞子造業甄子丹</p>
-  </div>
-  <div class="frame-box" style="display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 20px;">
-    <div style="flex: 1; min-width: 260px; text-align: left;">
-      <h2 style="color: #ffe6f9; font-size: 1.6rem;">🌟研製中：<span style="color: #66ccff;">《森上梅友前》</span></h2>
+      <h2 style="color: #ffe6f9; font-size: 1.6rem;">🌟開發中：<span style="color: #66ccff;">《森上梅友前》</span></h2>
       <p style="margin-top: 1.2rem; line-height: 1.8;">
-        她是正在制研的擬真AI對話角色，會朝真人方向製作 <strong>3D建模</strong> 與 <strong>情緒管理</strong> 結合，<br>
+        她是正在制研的擬真AI對話角色，我們透過 <strong>3D AI</strong> 與 <strong>2D 模型技術</strong> 結合，<br>
         將以最自然、最靈動的姿態與大家互動～<span style="color: #ffb6c1;">💮</span><br><br>
         ✦ 角色：森上梅友前 <br>
         ✦ 預計支援：情緒互動 / 換裝系統 / 語音反饋
       </p>
     </div>
-    
     <div style="flex: 0 0 auto;">
-      <img src="images/HEIF1.jpg" alt="夢織璃音 草圖" style="max-width: 220px; border-radius: 20px; box-shadow: 0 0 20px #ff99ccaa;">
+      <img src="F:\yuna_web\images\HEIF1.jpg" alt="夢織璃音 草圖" style="max-width: 220px; border-radius: 20px; box-shadow: 0 0 20px #ff99ccaa;">
     </div>
   </div>
   <script>
@@ -366,7 +314,7 @@
     "Content-Type": "application/json"
   },
   body: JSON.stringify({
-    model: "yunaGPT", // ← 你跑的模型名字
+    model: "yuna-gpt", // ← 你跑的模型名字
     prompt: msg,
     stream: false
   }),
@@ -389,7 +337,7 @@ showYunaBubble(`YUNA：${reply}`, bubbleType);
     bubble.id = "yuna-bubble";
     bubble.innerText = text;
     bubble.style.position = "absolute";
-    bubble.style.top = "360px"; //
+    bubble.style.top = "360px"; // 可以微調這裡，讓框框浮在頭頂正中上方
     bubble.style.left = "20%";
     bubble.style.transform = "translateX(-50%)";
     bubble.style.background = "#fff";
