--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
   </div>
 
   <header>
-    <a href="F:/yuna_web/menu/products.html" class="menu-button">🔬 黑子實驗室</a>
-    <a href="F:/yuna_web/menu/checkout.html" class="menu-button">加值/會員</a>
-    <a href="F:/yuna_web/menu/tools.html" class="menu-button">🛠️ 實用工具</a>
-    <a href="F:/yuna_web/menu/Yuna_Ai_Gallery.html" class="menu-button">❤ 竊竊私語</a>
-    <a href="F:/yuna_web/menu/hosting.html" class="menu-button">🌐 虛擬主機</a>
+    <a href="menu/products.html" class="menu-button">🔬 黑子實驗室</a>
+    <a href="menu/checkout.html" class="menu-button">加值/會員</a>
+    <a href="menu/tools.html" class="menu-button">🛠️ 實用工具</a>
+    <a href="menu/Yuna_Ai_Gallery.html" class="menu-button">❤ 竊竊私語</a>
+    <a href="menu/hosting.html" class="menu-button">🌐 虛擬主機</a>
     <a href="https://discord.gg/uu49VyYAwF" class="menu-button">💖 合作廠商</a>
   </header>
 
@@ -172,7 +172,7 @@
       </p>
     </div>
     <div style="flex: 0 0 auto;">
-      <img src="F:\yuna_web\images\HEIF1.jpg" alt="夢織璃音 草圖" style="max-width: 220px; border-radius: 20px; box-shadow: 0 0 20px #ff99ccaa;">
+      <img src="images\HEIF1.jpg" alt="夢織璃音 草圖" style="max-width: 220px; border-radius: 20px; box-shadow: 0 0 20px #ff99ccaa;">
     </div>
   </div>
   <script>
