--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     "Content-Type": "application/json"
   },
   body: JSON.stringify({
-    model: "yuna-gpt", // ← 你跑的模型名字
+    model: "yunaGPT", // 
     prompt: msg,
     stream: false
   }),
