--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       </p>
     </div>
     <div style="flex: 0 0 auto;">
-      <img src="images\HEIF1.jpg" alt="夢織璃音 草圖" style="max-width: 220px; border-radius: 20px; box-shadow: 0 0 20px #ff99ccaa;">
+      <img src="images\HEIF1.jpg" alt="本音草圖" style="max-width: 220px; border-radius: 20px; box-shadow: 0 0 20px #ff99ccaa;">
     </div>
   </div>
   <script>
