--- a/menu/Yuna_Ai_Gallery.html
+++ b/menu/Yuna_Ai_Gallery.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>YUNA 黑域展館</title>
+  <title> YUNA展館(準備中) </title>
   <style>
     body {
       margin: 0;
@@ -98,10 +98,10 @@
   </style>
 </head>
 <body>
-  <h1>YUNA 黑域展館</h1>
+  <h1> YUNA 展館</h1>
   <p class="intro">
-    歡迎來到 YUNA 黑域展館，這是一座沉浸式二次元 AI 模型空間，每一位展出者都經過深度訓練與定製。<br>
-    解鎖模型後，即可啟動專屬聊天室進行互動，進入不同性格的虛擬宇宙中——這裡不只是展覽，這裡是數位靈魂的棲息地。
+    歡迎來到 YUNA 展館，這是一座沉浸式混合著2D與3D的 AI 模型空間，每個人興趣不一樣，對象也不一樣。<br>
+    我們可以針對顧客的取向以及嗜好來去為您制定，你問我要不要等？大約十分鐘就可入場，讓你體驗不一樣的AI，因為這裡是數位靈魂的棲息地。
   </p>
 
   <div class="grid">
